# synthetmic-gui

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
assets/csvs/Banded periodic/: dimension.csv  seeds.csv  volumes.csv
assets/csvs/EBSD/: dimension.csv  seeds.csv  volumes.csv
modules/: common.py  home.py  laguerre.py  main.py  voronoi.py
pages/: genmic.py  metrics.py
rsconnect-python/: synthetmic-gui.json
shared/: comps.py  consts.py  controls.py  styles.py  utils.py  views.py
tabs/: clip.py  full.py  genmic.py  gentab.py  metrictab.py  slice_.py
tests/: utils_test.py
www/: full.html  layout.css  style.css
www/ga/: analytics.html
