[project]
name = "synthetmic-gui"
version = "0.1.0"
description = "A GUI for generating synthetic Laguerre polycrystalline microstructures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faicons>=0.2.2",
    "numpy>=2.3.1",
    "rsconnect-python>=1.27.0",
    "seaborn>=0.13.2",
    "shiny>=1.4.0",
    "shiny-validate>=0.1.3",
    "shinywidgets>=0.6.2",
    "synthetmic==0.1.3",
]
