[project]
name = "synthetmic-gui"
version = "0.3.3"
description = "A GUI for generating synthetic Laguerre polycrystalline microstructures"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "pysdot==0.2.38",
    "synthetmic==0.1.5",
    "faicons>=0.2.2",
    "numpy==2.3.2",
    "python-dotenv==1.2.1",
    "rsconnect-python==1.27.0",
    "seaborn>=0.13.2",
    "shiny==1.5.1",
    "shiny-validate>=0.1.3",
    "shinywidgets>=0.6.2",
]

[project.optional-dependencies]
tests = [
    "pytest>=9.0.1",
]
deploy = [
    "tbx",
]

[tool.pyright]
typeCheckingMode = "off"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["/"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/tests",
  "/data",
  "/notebooks",
  "/assets",
  "/www"
]

[tool.uv.sources]
tbx = { git = "https://github.com/Rasheed19/tbx.git" }
